# gEconpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Estimation Example.ipynb  Estimation with PyMC v2.ipynb  Estimation with PyMC.ipynb  Example Notebook.ipynb  Fitting Basic RBC to US Data.ipynb  README.md  TimeAwareSympy.py  asv.conf.json  codecov.yml  gEcon.py  gEcon.py Test.ipynb  model_utilities.py  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: pre-commit.yml  pre-commmit.yml  release.yml  rtd-link-preview.yml  run_tests.yml
GCN Files/: NK_canonical.gcn  NK_canonical_linear.gcn  New_Keynesian.gcn  RBC.gcn  RBC_basic.gcn  RBC_complete.gcn  RBC_priors.gcn  RBC_steady_state.gcn  RBC_two_household.gcn  RBC_two_household_additive.gcn  RBC_two_household_additive.txt  RBC_with_assumptions.gcn  Sims_NK_2024.gcn  Test_Model.gcn  nk_model_linearized.gcn  simplest_model.gcn
GCN Files/sims_2024/: nk_complete_taxes.gcn  nk_money_growth.gcn  nk_taylor_rule_capital.gcn  nk_taylor_rule_linearized.gcn  nk_taylor_rule_stick_wage_capital.gcn  nk_with_sticky_wages.gcn
benchmarks/: bench_import.py
benchmarks/model/: bench_build.py  bench_model.py  bench_solve.py  bench_steady_state.py
benchmarks/parser/: bench_parse.py
benchmarks/solvers/: bench_cycle_reduction.py  bench_gensys.py  bench_sparse_newton.py
conda_envs/: environment.yml  environment_dev.yml  environment_docs.yml  geconpy_test.yml
docs/scripts/: rerun_examples.py
docs/source/: about.rst  api.rst  conf.py  get_started.rst  index.rst  install.rst  user_guide.rst
estimation tests/: gEcon_to_sm.py  pymc3_test.py  statsmodels_ops.py  transformers.py
examples/: Estimation Example.ipynb  Example Notebook.ipynb  Loading and preprocessing DSGE data.ipynb  Multiple Households.ipynb  Production Functions.ipynb  Reading in linearised models.ipynb  sims_2024_nk.ipynb  sims_2024_nk_taylor_rule_fully_linear.ipynb  sims_2024_nk_taylor_rule_linearized.ipynb
examples/src/: utils.py
gEcon/: __init__.py
gEcon/classes/: Block.py  Model.py  TimeAwareSymbol.py  __init__.py  block.py  model.py  progress_bar.py  time_aware_symbol.py  transformers.py  utilities.py
gEcon/estimation/: estimate.py  estimation_utilities.py  kalman_filter.py  kalman_smoother.py
gEcon/exceptions/: exceptions.py
gEcon/numba_linalg/: LAPACK.py  overloads.py
gEcon/parser/: constants.py  file_loaders.py  gEcon_parser.py  parse_distributions.py  parse_equations.py  parse_plaintext.py  validation.py
gEcon/plotting/: plotting.py
gEcon/sampling/: posterior_utilities.py  prior_utilities.py
gEcon/shared/: __init__.py  dynare_convert.py  numba_linalg.py  statsmodel_convert.py  types.py  utilities.py
gEcon/solvers/: cycle_reduction.py  gensys.py  perturbation.py  steady_state.py
gEconpy/: __init__.py  _version.py  dynare_convert.py  exceptions.py  plotting.py  utilities.py
gEconpy/classes/: __init__.py  block.py  containers.py  distributions.py  model.py  optimize_wrapper.py  progress_bar.py  simplification.py  time_aware_symbol.py  transformers.py
gEconpy/data/: __init__.py  examples.py
gEconpy/estimation/: estimate.py  estimation_utilities.py  kalman_filter.py  kalman_smoother.py  transformers.py
gEconpy/exceptions/: exceptions.py
gEconpy/model/: block.py  build.py  compile.py  model.py  parameters.py  perfect_foresight.py  perturbation.py  sampling.py  simplification.py  simulate.py  statespace.py  steady_state.py  system_reduction.py  timing.py
gEconpy/numba_linalg/: LAPACK.py  intrinsics.py  overloads.py  utilities.py
gEconpy/numba_tools/: overloads.py  utilities.py
gEconpy/numbaf/: LAPACK.py  __init__.py  intrinsics.py  overloads.py  utilities.py
gEconpy/parser/: __init__.py  adapter.py  ast_to_distribution.py  ast_to_sympy.py  constants.py  dist_syntax.py  error_catalog.py  errors.py  file_loaders.py  formatting.py  gEcon_parser.py  html.py  lexer.py  loader.py  parse_distributions.py  parse_equations.py  parse_plaintext.py  preprocessor.py  suggestions.py  tokens.py  validation.py
gEconpy/plotting/: __init__.py  plotting.py
gEconpy/pytensorf/: __init__.py  block.py  block_rewrites.py  compile.py  real.py  real_eig.py  sparse_jacobian.py
gEconpy/sampling/: __init__.py  posterior_utilities.py  prior_utilities.py
gEconpy/shared/: __init__.py  dynare_convert.py  statsmodel_convert.py  typing.py  utilities.py
gEconpy/solvers/: backward_looking.py  cycle_reduction.py  gensys.py  parameters.py  perturbation.py  shared.py  sparse_newton.py  steady_state.py
gcn.tmbundle/: info.plist  language-configuration.json  package.json
gcn.tmbundle/Preferences/: gcn.tmPreferences
gcn.tmbundle/Syntaxes/: gcn.tmLanguage.json
scripts/: regenerate_expected_gcn_errors.py  run_mypy.py
sphinxext/: generate_gallery.py
tests/: TimeAwareSymbol_tests.py  block_test.py  block_tests.py  conftest.py  distribution_parser_test.py  distribution_parser_tests.py  distribution_tests.py  gensys_tests.py  kalman_filter_test.py  model_tests.py  parser_test.py  parser_tests.py  pymc_distributions.py  steady_state_test.py  test_TimeAwareSymbol.py  test_block.py  test_compile.py  test_containers.py  test_distribution_parser.py  test_dynare_convert.py  test_estimation.py  test_gensys.py  test_kalman_filter.py  test_model.py  test_model_loaders.py  test_parser.py  test_perturbation.py  test_plotting.py  test_pymc_distribution.py  test_pytensor_code.py  test_sampling.py  test_statespace.py  test_statsmodel_convert.py  test_steady_state.py  test_time_aware_symbols.py  test_transformers.py  test_utilities.py
tests/Test Answer Strings/: test_block_deletion.txt  test_parse_gcn.txt  test_split_gcn_by_blocks.txt
tests/Test GCNs/: Full_New_Keyensian.gcn  Full_New_Keynesian_no_Steady_State.gcn  One_Block_Simple_1.gcn  One_Block_Simple_1_w_Distributions.gcn  One_Block_Simple_1_w_Steady_State.gcn  One_Block_Simple_2.gcn  One_Block_Simple_2_without_Extra_Params.gcn  One_Block_Simple_with_duplicate_param_1.gcn  Open_RBC.gcn  RBC_Linearized.gcn  Two_Block_RBC_1.gcn  full_nk.gcn  (+14 more)
(+325 files in other folders)
