[metadata]
name = gEconpy
version = 1.0.3
description = A package for solving, estimating, and analyzing DSGE models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/gEcon.py
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    emcee
    arviz
    matplotlib
    numba
    numpy
    pyparsing
    scipy
    statsmodels
    sympy

[options.packages.find]
exclude = tests*

;[options.entry_points]
;numba_extensions =
;	init = gEconpy:init
