[metadata]
name = gEconpy
version = 1.2.1
description = A package for solving, estimating, and analyzing DSGE models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/gEcon.py
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    arviz
    matplotlib
    numba
    numpy
    pyparsing
    scipy
    sympy
    pymc-experimental

[options.packages.find]
exclude = tests*
